Specification patter, Dto, Auto Mapper and  static files.

--- a/asset-mate-api/appsettings.Development.json
+++ b/asset-mate-api/appsettings.Development.json
@@ -7,5 +7,6 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data source = asset_mate.db"
-  }
+  },
+  "ApiUrl": "https://localhost:5001/"
 }
